--- a/query/package.json
+++ b/query/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "axios": "^0.21.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "nodemon":"*"
   }
 }
